--- a/style.css
+++ b/style.css
@@ -143,8 +143,6 @@ body {
 }
 
 .player-container {
-  position: absolute;
-  top: 0;
-  left: -9999px;
+  margin-top: 20px;
   visibility: hidden;
 }
