--- a/style.css
+++ b/style.css
@@ -142,6 +142,18 @@ body {
   transition: all 0.2s ease-in-out;
 }
 
+.credit a {
+  position: absolute;
+  bottom: 20px;
+  right: 10px;
+  font-size: 9px;
+  color: rgba(255,255,255,0.25);
+  background: rgba(0,0,0,0.25);
+  border-radius: 100%;
+  padding: 4px 8px;
+  text-decoration: none;
+}
+
 .player-container {
   position: absolute;
   top: 0;
