--- a/style.css
+++ b/style.css
@@ -146,11 +146,11 @@ body {
   position: absolute;
   bottom: 20px;
   right: 10px;
-  font-size: 9px;
+  border-radius: 20px;
+  padding: 4px 8px;
   color: rgba(255,255,255,0.25);
   background: rgba(0,0,0,0.25);
-  border-radius: 100%;
-  padding: 4px 8px;
+  font-size: 9px;
   text-decoration: none;
 }
 
