--- a/style.css
+++ b/style.css
@@ -152,6 +152,7 @@ body {
   background: rgba(0,0,0,0.25);
   font-size: 9px;
   text-decoration: none;
+  transition: all 0.75s ease-in-out;
 }
 
 .credit a:hover {
