--- a/style.css
+++ b/style.css
@@ -151,8 +151,9 @@ body {
   color: rgba(255,255,255,0.25);
   background: rgba(0,0,0,0.25);
   font-size: 9px;
+  font-weight: bold;
   text-decoration: none;
-  transition: all 0.75s ease-in-out;
+  transition: all 0.33s ease-in-out;
 }
 
 .credit a:hover {
